--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <script>
-            alert ("meu primeiro java script");
-        </script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
