--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <script type="text/javascript" src="js/main.js"></script>
+        <h1>Você é maravilhosa!</h1>
     </body>
 </html>
