--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title>
             Minha página
         </title>
+
         <meta charset="utf-8">
+
+        <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
-        <script type="text/javascript" src="js/main.js"></script>
-        <h1>Você é maravilhosa!</h1>
+    <script>
+        //soma();
+        document.write(somavetor([1,2,3,4,5,6]));
+    </script>
     </body>
 </html>
