--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <body>
     <script>
         //soma();
-        document.write(somavetor([1,2,3,4,5,6]));
+        //document.write(somavetor([1,2,3,4,5,6]));
+        //document.write(inverter([1,2,3,4,5,6]));
+        document.write(inverterfrase());
     </script>
     </body>
 </html>
