--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
         //soma();
         //document.write(somavetor([1,2,3,4,5,6]));
-        //document.write(inverter([1,2,3,4,5,6]));
+        //document.write(inverterlista([1,2,3,4,5,6]));
         document.write(inverterfrase());
     </script>
     </body>
