--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         //soma();
         //document.write(somavetor([1,2,3,4,5,6]));
         //document.write(inverterlista([1,2,3,4,5,6]));
-        document.write(inverterfrase());
-    </script>
+        //document.write(inverterfrase());
+        plusMinus([-2,-1,0,1,2]);
+    </script>   
     </body>
 </html>
