--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         //document.write(somavetor([1,2,3,4,5,6]));
         //document.write(inverterlista([1,2,3,4,5,6]));
         //document.write(inverterfrase());
-        plusMinus([-2,-1,0,1,2]);
+        //plusMinus([-2,-1,0,1,2]);
+        maiorMenor([-100,0,500]);
     </script>   
     </body>
 </html>
