--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         //document.write(inverterlista([1,2,3,4,5,6]));
         //document.write(inverterfrase());
         //plusMinus([-2,-1,0,1,2]);
-        maiorMenor([-100,0,500]);
+        //maiorMenor([0,0,0,1]);
+        //media([5,10]);
+        tamanholista(["Pri", "Ca", "Pamela", "Romano"]);
+
     </script>   
     </body>
 </html>
