--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         //plusMinus([-2,-1,0,1,2]);
         //maiorMenor([0,0,0,1]);
         //media([5,10]);
-        tamanholista(["Pri", "Ca", "Pamela", "Romano"]);
+        tamanholista(["Priscila", "Camila", "Pamela", "Romano"]);
 
     </script>   
     </body>
