--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         //plusMinus([-2,-1,0,1,2]);
         //maiorMenor([0,0,0,1]);
         //media([5,10]);
-        tamanholista(["Priscila", "Camila", "Pamela", "Romano"]);
-
+        //tamanholista(["Priscila", "Camila", "Pamela", "Romano"]);
+        //document.write(inverterlista(["Priscila", "Camila", "Pamela", "Romano"]));
+        //sdocument.write(inverterpalavra(["Priscila", "Camila", "Pamela", "Romano"]));
     </script>   
     </body>
 </html>
