--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         //media([5,10]);
         //tamanholista(["Priscila", "Camila", "Pamela", "Romano"]);
         //document.write(inverterlista(["Priscila", "Camila", "Pamela", "Romano"]));
-        //sdocument.write(inverterpalavra(["Priscila", "Camila", "Pamela", "Romano"]));
+        document.write(inverterpalavra(["Priscila", "Camila", "Pamela", "Romano"]));
     </script>   
     </body>
 </html>
