--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         //maiorMenor([0,0,0,1]);
         //media([5,10]);
         //tamanholista(["Priscila", "Camila", "Pamela", "Romano"]);
-        document.write(inverterlista(["Priscila", "Camila", "Pamela", "Romano"]));
+        //document.write(inverterlista(["Priscila", "Camila", "Pamela", "Romano"]));
         //document.write(inverterpalavra(["Priscila", "Camila", "Pamela", "Romano"]));
+        //mostrarlista(["Priscila", "Camila", "Pamela", "Romano"]);
+        //document.write(removerlista(["Priscila", "Camila","Pamela", "Romano"]));
     </script>   
     </body>
 </html>
