--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         //document.write(inverterpalavra(["Priscila", "Camila", "Pamela", "Romano"]));
         //mostrarlista(["Priscila", "Camila", "Pamela", "Romano"]);
         //document.write(removerlista(["Priscila", "Camila","Pamela", "Romano"]));
+        mediaponderada();
     </script>   
     </body>
 </html>
