--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         //document.write(inverterlista(["Priscila", "Camila", "Pamela", "Romano"]));
         //document.write(inverterpalavra(["Priscila", "Camila", "Pamela", "Romano"]));
         //mostrarlista(["Priscila", "Camila", "Pamela", "Romano"]);
-        document.write(removerlista(["Priscila", "Camila","Pamela", "Romano"]));
-        //mediaponderada();        
+        //document.write(removerlista(["Priscila", "Camila","Pamela", "Romano"]));
+        //teste();     
+        //mediaponderada();   
     </script>   
     </body>
 </html>
