--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         //document.write(inverterlista([1,2,3,4,5,6]));
         //document.write(inverterfrase());
         //plusMinus([-2,-1,0,1,2]);
-        //maiorMenor([0,0,0,1]);
+        //maiorMenor([7.9,12,20,1.5,15]);
         //media([5,10]);
         //tamanholista(["Priscila", "Camila", "Pamela", "Romano"]);
         //document.write(inverterlista(["Priscila", "Camila", "Pamela", "Romano"]));
@@ -26,6 +26,14 @@
         //document.write(removerlista(["Priscila", "Camila","Pamela", "Romano"]));
         //teste();     
         //mediaponderada();   
+        testeEx1();
+        testeEx2();
+        testeEx3();
+        testeEx4(); 
+        testeEx5();
+        testeEx6();
+        testeEx7();          
+        
     </script>   
     </body>
 </html>
