--- a/index.html
+++ b/index.html
@@ -1,39 +1,34 @@
-<!DOCTYPE html>
 <html>
     <head>
+        <script src="projeto.js"></script>
+	<style>
 
-        <title>
-            Minha página
-        </title>
+h1 {
+  text-align: justify;
+  text-transform: uppercase;
+  color: #4CAF50;
+}
 
-        <meta charset="utf-8">
+p {
+  text-indent: 50px;
+  text-align: justify;
+  letter-spacing: 3px;
+}
 
-        <script type="text/javascript" src="js/main.js"></script>
+div {
+  text-align: justify;
+}
+
+</style>
+
     </head>
     <body>
-    <script>
-        //soma();
-        //document.write(somavetor([1,2,3,4,5,6]));
-        //document.write(inverterlista([1,2,3,4,5,6]));
-        //document.write(inverterfrase());
-        //plusMinus([-2,-1,0,1,2]);
-        //maiorMenor([7.9,12,20,1.5,15]);
-        //media([5,10]);
-        //tamanholista(["Priscila", "Camila", "Pamela", "Romano"]);
-        //document.write(inverterlista(["Priscila", "Camila", "Pamela", "Romano"]));
-        //document.write(inverterpalavra(["Priscila", "Camila", "Pamela", "Romano"]));
-        //mostrarlista(["Priscila", "Camila", "Pamela", "Romano"]);
-        //document.write(removerlista(["Priscila", "Camila","Pamela", "Romano"]));
-        //teste();     
-        //mediaponderada();   
-        testeEx1();
-        testeEx2();
-        testeEx3();
-        testeEx4(); 
-        testeEx5();
-        testeEx6();
-        testeEx7();          
         
-    </script>   
+       
+        <br>
+        <div class="info">	
+ 	 <h1>Campeonato Brasileiro - 2021</h1>
+	<button id="btnCBF"> Conferir tabela de classificação</button>
+        </div>
     </body>
 </html>
